fix: MatterportController compilation errors (URLEncoder charset, var keyword)